refactor: renaming from entity to contact
