# src/app/home/contact/dtos/responses/contact.response.dto.ts
@@ -1,6 +1,6 @@
 import { ApiProperty, ApiPropertyOptional } from "@nestjs/swagger";
 
-export class EntityResponseDto {
+export class ContactResponseDto {
   @ApiProperty({ example: 1 })
   id: number;
 
